--- a/Android-java/SoundRecorder/AndroidManifest.xml
+++ b/Android-java/SoundRecorder/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2007 The Android Open Source Project
+<!--
+     Copyright (C) 2007 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -11,34 +12,46 @@
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
-     limitations under the License.
+     limitations under the License.
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.soundrecorder">
+    package="com.android.soundrecorder"
+    android:versionCode="1"
+    android:versionName="0.01" >
 
     <original-package android:name="com.android.soundrecorder" />
+
+    <uses-sdk
+        android:minSdkVersion="19"
+        android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <application android:label="@string/app_name"
-                 android:icon="@drawable/ic_launcher_soundrecorder">
-        <activity android:name="SoundRecorder"
-                android:configChanges="orientation|screenSize|keyboardHidden"
-                android:screenOrientation="unspecified"
-                android:clearTaskOnLaunch="true"
-                android:theme="@style/Theme.SoundRecorder">
+
+    <application
+        android:icon="@drawable/ic_launcher_soundrecorder"
+        android:label="@string/app_name" >
+        <activity
+            android:name="SoundRecorder"
+            android:clearTaskOnLaunch="true"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="unspecified"
+            android:theme="@style/Theme.SoundRecorder" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
-                 <action android:name="android.provider.MediaStore.RECORD_SOUND" />
-                 <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="android.provider.MediaStore.RECORD_SOUND" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
