--- a/Android-java/SoundRecorder/AndroidManifest.xml
+++ b/Android-java/SoundRecorder/AndroidManifest.xml
@@ -20,9 +20,8 @@
         android:icon="@drawable/ic_launcher_soundrecorder"
         android:label="@string/app_name" >
         <activity
-            android:name="SoundRecorder"
+            android:name="SoundRecorderActivity"
             android:clearTaskOnLaunch="true"
-            android:configChanges="orientation|screenSize|keyboardHidden"
             android:screenOrientation="unspecified"
             android:theme="@style/Theme.SoundRecorder" >
             <intent-filter>
