--- a/Android-java/SoundRecorder/AndroidManifest.xml
+++ b/Android-java/SoundRecorder/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.soundrecorder"
     android:versionCode="1"
-    android:versionName="0.01" >
+    android:versionName="0.91" >
 
     <original-package android:name="com.android.soundrecorder" />
 
@@ -12,11 +11,11 @@
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:allowBackup="true"
         android:icon="@drawable/ic_launcher_soundrecorder"
         android:label="@string/app_name" >
         <activity
