--- a/Android-java/SoundRecorder/AndroidManifest.xml
+++ b/Android-java/SoundRecorder/AndroidManifest.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.soundrecorder"
+    package="com.encryption.soundrecorder"
     android:versionCode="1"
     android:versionName="0.91" >
-
-    <original-package android:name="com.android.soundrecorder" />
 
     <uses-sdk
         android:minSdkVersion="19"
@@ -16,7 +14,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher_soundrecorder"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
             android:name="SoundRecorderActivity"
@@ -25,14 +23,9 @@
             android:theme="@style/Theme.SoundRecorder" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+				 <!--  category android:name="android.intent.category.HOME" / -->
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.provider.MediaStore.RECORD_SOUND" />
-
-                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
