--- a/Android-java/SoundRecorder/AndroidManifest.xml
+++ b/Android-java/SoundRecorder/AndroidManifest.xml
@@ -11,7 +11,8 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
+	<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+	
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
