--- a/Android-java/SoundRecorder/AndroidManifest.xml
+++ b/Android-java/SoundRecorder/AndroidManifest.xml
@@ -20,8 +20,8 @@
         <activity
             android:name="SoundRecorderActivity"
             android:clearTaskOnLaunch="true"
-            android:screenOrientation="unspecified"
-            android:theme="@style/Theme.SoundRecorder" >
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:screenOrientation="unspecified" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 				 <!--  category android:name="android.intent.category.HOME" / -->
