添加FM1388 切换mode的方法.

--- a/Android-java/SoundRecorder/AndroidManifest.xml
+++ b/Android-java/SoundRecorder/AndroidManifest.xml
@@ -21,6 +21,7 @@
             android:name="SoundRecorderActivity"
             android:clearTaskOnLaunch="true"
             android:theme="@android:style/Theme.NoTitleBar"
+            android:launchMode="singleTask"         
             android:screenOrientation="unspecified" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
